Wrap content of letter boxes * Yet to figure how to ensure equal size of boxes

--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,8 @@ html[data-bs-theme="dark"] {
   /* center */
   width: 100%;
   padding: 50px;
+  /* if they go beyond the screen, wrap them */
+  flex-wrap: wrap;
 }
 
 #pagination-container {
